--- a/style-1.css
+++ b/style-1.css
@@ -23,17 +23,6 @@ ul {
 }
 
 /* Reusebale styling */
-.center-row{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.center-column{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 .span{
     font-size: 40px;
     line-height: 200%;
@@ -74,6 +63,8 @@ header{
     padding: 30px 20px;
 }
 nav{
+    display: flex;
+    align-items: center;
     gap:34px;
 }
 nav button{
@@ -85,6 +76,10 @@ nav button{
 
 /* Hero Section */
 .hero-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 5px;
     color: white;
     height: 80%;
@@ -105,8 +100,12 @@ nav button{
 
 /* Ingredients section */
 .ingredients-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 1200px;
     margin: -10px auto;
+    padding: 0px 20px;
     gap: 100px;
 }
 .ingredients-border{
@@ -135,9 +134,12 @@ nav button{
 
 /* Tutorial section */
 .tutorial-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 1200px;
     margin: 0px auto;
-    padding: 150px 0;
+    padding: 150px 20px;
     gap: 100px;
 }
 .tutorial-container{
@@ -156,18 +158,35 @@ nav button{
 
 /* Like section  */
 .like-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
     gap: 50px;
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
-    padding: 100px 0px;
+    padding: 50px 20px;
 
 }
-.article{
+.like-article{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 24px;
 }
+.articles {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap:50px
+}
 .article-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:30px;
     text-align: start;
 }
 
@@ -182,13 +201,11 @@ nav button{
     line-height: 190%;
 }
 
-.articles {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap:50px
-}
 
 .pages{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 28px;
 }
 .circle{
@@ -206,7 +223,7 @@ nav button{
 footer{
     background-color: #383838;
     position: relative;
-    height: 345px;
+    overflow: hidden;
 }
 footer img{
     position: absolute;
@@ -238,3 +255,94 @@ footer img{
     font-weight: bold;
 }
 
+
+/* Media Queries */
+
+/* tablet */
+@media only screen and (max-width: 768px) {
+.navigation{
+    flex-direction: column;
+    gap:30px;
+}
+nav{
+    gap:20px;
+}
+nav button{
+    padding: 10px 10px;
+}
+nav a{
+    font-size: 14px;
+}
+.hero-section{
+    text-align: center;
+}
+.hero-section span{
+    font-size: 45px;
+}
+
+.hero-section h1{
+    font-size: 40px;
+}
+.hero-section p{
+    font-size: 20px;
+}
+.ingredients-section{
+    flex-direction: column;
+}
+.tutorial-section {
+    flex-direction: column-reverse;
+}
+.tutorial-container img {
+    width: 300px;
+}
+#play{
+    width: 50px;
+}
+
+.article {
+    width: 100%;
+}
+
+.articles {
+    grid-template-columns: 1fr;
+}
+}
+    
+/* tablet */
+@media only screen and (max-width: 425px) {
+nav {
+    display: none;
+}
+.span{
+font-size:30px
+}
+.title{
+    font-size: 25px ;
+}
+.text{
+    font-size: 14px ;
+}
+.article-content{
+    flex-direction: column;
+}
+.recipe-content{
+    align-items: center;
+    text-align: center;
+}
+.chef-section{
+    overflow-x: hidden;
+}
+.footer-container{
+    gap: 20px;
+    flex-direction: column;
+    padding: 40px 20px;
+}
+.footer-content{
+    flex-direction: column;
+}
+footer img {
+    display: none;
+}
+
+
+}
