--- a/style-1.css
+++ b/style-1.css
@@ -308,10 +308,16 @@ nav a{
 }
 }
     
-/* tablet */
+/* mobile */
 @media only screen and (max-width: 425px) {
 nav {
-    display: none;
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+
+}
+nav a{
+    text-align: center;
+
 }
 .span{
 font-size:30px
