--- a/style.css
+++ b/style.css
@@ -1,503 +1,525 @@
 /* Reset */
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
-body{
-    font-family: Source Sans Pro , sans-serif;
+body {
+  font-family: Source Sans Pro, sans-serif;
 }
-a{
-    text-decoration: none;
-    color: white;
-    cursor: pointer;
+a {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
 }
-article hr{
-    width: 30px;
-    border: 1px solid #C89446;
-    margin-bottom: 16px;
+article hr {
+  width: 30px;
+  border: 1px solid #c89446;
+  margin-bottom: 16px;
 }
-button{
-    background-color: transparent;
-    cursor: pointer;
+button {
+  background-color: transparent;
+  cursor: pointer;
 }
 
 /* Reusebale styling */
 
-.span{
-    font-size: 40px;
-    line-height: 200%;
-    font-family: Pinyon script;
-    color:#C89446;
+.span {
+  font-size: 40px;
+  line-height: 200%;
+  font-family: Pinyon script;
+  color: #c89446;
 }
-.title{
-    font-size: 28px;
-    letter-spacing: 2px;
+.title {
+  font-size: 28px;
+  letter-spacing: 2px;
 }
-.text{
-    color: #6F6F6F;
-    line-height: 200%;
+.text {
+  color: #6f6f6f;
+  line-height: 200%;
 }
 .button {
-    border:none;
-    color: #C89446;
-    margin-top: 40px;
-    cursor: pointer;
+  border: none;
+  color: #c89446;
+  margin-top: 40px;
+  cursor: pointer;
 }
-
-
 
 /* Header */
-header{
-    background-image:    linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)),
+header {
+  background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)),
     url(/assets/eggs.jpg);
-    height: 80vh;
-    background-position: center;
-    background-size: cover;
+  height: 80vh;
+  background-position: center;
+  background-size: cover;
 }
-.navigation{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 30px 20px;
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 30px 20px;
 }
-nav{
-    display: flex;
-    align-items: center;
-    gap:34px;
+nav {
+  display: flex;
+  align-items: center;
+  gap: 34px;
 }
-nav button{
-    padding: 11px 17px ;
-    background-color: transparent;
-    border: 1px solid #C89446;
-    color: white;
+nav button {
+  padding: 11px 17px;
+  background-color: transparent;
+  border: 1px solid #c89446;
+  color: white;
 }
 
 /* Hero Section */
-.hero-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 5px;
-    color: white;
-    height: 80%;
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 5px;
+  color: white;
+  height: 80%;
 }
 
-.hero-section span{
-    font-size: 60px;
+.hero-section span {
+  font-size: 60px;
 }
-.hero-section h1{
-    font-size: 80px;
-    letter-spacing: 11.67px;
+.hero-section h1 {
+  font-size: 80px;
+  letter-spacing: 11.67px;
 }
-.hero-section p{
-    font-size: 24px;
-    font-weight: lighter;
-    letter-spacing: 4px;
+.hero-section p {
+  font-size: 24px;
+  font-weight: lighter;
+  letter-spacing: 4px;
 }
 
 /* Discover section */
-.discover-container{
-    position: relative;
+.discover-container {
+  position: relative;
 }
-#background-1{
-    position: absolute;
-    right: 0;
-    top: 50px;
+#background-1 {
+  position: absolute;
+  right: 0;
+  top: 50px;
 }
-.discover-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    margin: -10px auto;
-    padding: 0 20px;
-    gap: 100px;
+.discover-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  margin: -10px auto;
+  padding: 0 20px;
+  gap: 100px;
 }
-.image-border{
-    border: 1px solid #C89446;
+.image-border {
+  border: 1px solid #c89446;
 }
-.image-border img{
-    transform: translate(30px,30px);
+.image-border img {
+  transform: translate(30px, 30px);
 }
 .article {
-    width: 445px;
-    z-index: 99;
+  width: 445px;
+  z-index: 99;
 }
-
 
 /* Tasteful section */
-.tasteful-container{
-    position: relative;
+.tasteful-container {
+  position: relative;
 }
-#background-2{
-    position: absolute;
-    left: 0;
-    top: 50px; 
+#background-2 {
+  position: absolute;
+  left: 0;
+  top: 50px;
 }
-.tasteful-section{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0px auto;
-    padding: 150px 20px;
-    gap: 100px;
+.tasteful-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0px auto;
+  padding: 150px 20px;
+  gap: 100px;
 }
-.reverse img{
-    transform: translate(-30px,30px) !important;
+.reverse img {
+  transform: translate(-30px, 30px) !important;
 }
-
 
 /* Menu section */
-.menu-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    gap: 50px;
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: center;
+.menu-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  gap: 50px;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
 }
-.menu{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-#polygone{
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+#polygone {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.menu-section a{
-    color: black;
+.menu-section a {
+  color: black;
 }
-.menu p{
-    width: 60%;
+.menu p {
+  width: 60%;
 }
-.links{
-    display: flex;
-    gap: 65px;
+.links {
+  display: flex;
+  gap: 65px;
 }
-#active-link{
-    border-bottom: 2px solid #C89446;
+#active-link {
+  border-bottom: 2px solid #c89446;
 }
 .menu-articles {
-    padding: 100px 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 100px;
+  padding: 100px 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 100px;
 }
 .recipe {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:50px;
-    background-color: white;
-    z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  background-color: white;
+  z-index: 99;
 }
 .recipe-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 60%;
-    gap: 10px;
-    text-align: end;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 60%;
+  gap: 10px;
+  text-align: end;
 }
-.recipe-content span{
-    font-size: 40px;
+.recipe-content span {
+  font-size: 40px;
 }
-.recipe-content h3{
-    font-size: 18px;
-    letter-spacing: 1px;
+.recipe-content h3 {
+  font-size: 18px;
+  letter-spacing: 1px;
 }
-.recipe-content p{
-    color:#6F6F6F;
-    font-size:14px ;
-    line-height: 190%;
+.recipe-content p {
+  color: #6f6f6f;
+  font-size: 14px;
+  line-height: 190%;
 }
 
 /* chef section*/
-.chef-section{
-    display: flex;
-    align-items: center;
-    padding: 100px 20px 0px;
-    max-width: 1200px;
-    margin: 0 auto;
+.chef-section {
+  display: flex;
+  align-items: center;
+  padding: 100px 20px 0px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.chef-section article{
-    width: 60%;
+.chef-section article {
+  width: 60%;
 }
-.chef-section img{
-    filter: grayscale(100%);
-    transition: all 1s ease-in-out;
+.chef-section img {
+  filter: grayscale(100%);
+  transition: all 1s ease-in-out;
 }
-.chef-section img:hover{
-    filter: grayscale(0%);
+.chef-section img:hover {
+  filter: grayscale(0%);
 }
 
 /* resevation section */
-.reservation-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(rgb(0, 0, 0),rgba(0, 0, 0, 0)), url(/assets/reservation.jpg);
-    height: 600px;
-    color:white;
-    padding: 20px 20px;
-    gap:40px;
+.reservation-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0)),
+    url(/assets/reservation.jpg);
+  height: 600px;
+  color: white;
+  padding: 20px 20px;
+  gap: 40px;
 }
-.reservation-section article{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 600px;
-    text-align: center;
+.reservation-section article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  text-align: center;
 }
-Form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap:60px;
+Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
 }
-.inputs{
-    display: flex;
-    gap:20px;
+.inputs {
+  display: flex;
+  gap: 20px;
 }
-.inputs input, select{
-   padding: 11px 88px 11px 16px ; 
-   background-color: transparent;
-   border: 1px solide white;
-   color: white;
+.inputs input,
+select {
+  padding: 11px 88px 11px 16px;
+  background-color: transparent;
+  border: 1px solide white;
+  color: white;
 }
-#active-input::placeholder{
-    color: white;
-}
-
-#active-input{
-    border: #C89446 1px solid;
+#active-input::placeholder {
+  color: white;
 }
 
-.reservation-section button{
-    padding: 11px 68px;
-    background-color: #C89446;
-    border: none;
-    color:white;
+#active-input {
+  border: #c89446 1px solid;
+}
+
+.reservation-section button {
+  padding: 11px 68px;
+  background-color: #c89446;
+  border: none;
+  color: white;
 }
 
 /* Recipies section  */
-.recepies-container{
-    position: relative;
+.recepies-container {
+  position: relative;
 }
-#background-3{
-    position: absolute;
-    left: 0;
-    top: 0;
+#background-3 {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.recepies-section {
+  position: relative;
+  padding: 100px 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 50px;
+}
+.recepies-section article {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 60%;
+}
+.plates {
+  width: 80%;
+}
+.plate {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 30px;
+}
+.plate h3 {
+  font-size: 28px;
+}
+.plate small {
+  font-size: 18px;
+  font-weight: lighter;
+  color: gray;
+}
+.plate p {
+  color: gray;
+}
 
-}
-.recepies-section{
-    position: relative;
-    padding: 100px 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: end;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap:50px;
-}
-.recepies-section article{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    width: 60%;
-}
-.plates{
-    width: 80%;
-}
-.plate{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 30px;
-}
-.plate h3{
-    font-size: 28px;
-}
-.plate small{
-    font-size: 18px;
-    font-weight: lighter;
-    color: gray;
-}
-.plate p{
-    color: gray;
-}
-
-.plates hr{
-    margin: 20px 0;
+.plates hr {
+  margin: 20px 0;
 }
 
 /* map section */
 
-.map-section{
-    height: 450px;
+.map-section {
+  height: 450px;
 }
 
 /* footer */
-footer{
-    background-color: #383838;
-    position: relative;
-    overflow:hidden;
+footer {
+  background-color: #383838;
+  position: relative;
+  overflow: hidden;
 }
-footer img{
-    position: absolute;
-    top:25px;
-    right:0;
+footer img {
+  position: absolute;
+  top: 25px;
+  right: 0;
 }
-.footer-container{
-    padding: 55px 20px 0px 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    margin: 0 auto;
-    max-width: 1200px;
+.footer-container {
+  padding: 55px 20px 0px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  margin: 0 auto;
+  max-width: 1200px;
 }
-.footer-content{
-    display: flex;
+.footer-content {
+  display: flex;
 }
-.footer-container h3{
-    color: #C89446;
-    margin-bottom: 15px;
+.footer-container h3 {
+  color: #c89446;
+  margin-bottom: 15px;
 }
-.footer-container p{
-    color: white;
-    font-weight: lighter;
-    margin-bottom: 10px;
-    width: 80%;
+.footer-container p {
+  color: white;
+  font-weight: lighter;
+  margin-bottom: 10px;
+  width: 80%;
 }
-.footer-container span{
-    font-weight: bold;
+.footer-container span {
+  font-weight: bold;
+}
+
+/* animation on scroll */
+[class*="reveal-"] {
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.reveal-visible {
+  opacity: 1;
+  transform: translateY(0px);
+  transition: 1s;
+}
+.reveal-1 {
+  transition-delay: 0;
+}
+.reveal-2 {
+  transition-delay: 0.1s;
+}
+
+.reveal-3 {
+  transition-delay: 0.2s;
+}
+
+.reveal-4 {
+  transition-delay: 0.3s;
 }
 
 /* Media Queries */
 
 /* tablet */
 @media only screen and (max-width: 768px) {
-
-.navigation{
+  .navigation {
     flex-direction: column;
-    gap:30px;
-}
-nav{
-    gap:20px;
-}
-nav button{
-    padding: 10px 10px;
-}
-nav a{
-    font-size: 14px;
-}
-.hero-section span{
-    font-size: 45px;
-}
-
-.hero-section h1{
-    font-size: 40px;
-}
-.hero-section p{
-    font-size: 20px;
-}
-.discover-section{
-    flex-direction: column;
-}
-.tasteful-section {
-    flex-direction: column-reverse;
-}
-
-.discover-section img,.tasteful-section img{
-    width: 200px;
-}
-.article {
-    width: 100%;
-}
-.links{
     gap: 30px;
-}
+  }
+  nav {
+    gap: 20px;
+  }
+  nav button {
+    padding: 10px 10px;
+  }
+  nav a {
+    font-size: 14px;
+  }
+  .hero-section span {
+    font-size: 45px;
+  }
 
-.menu-articles {
+  .hero-section h1 {
+    font-size: 40px;
+  }
+  .hero-section p {
+    font-size: 20px;
+  }
+  .discover-section {
+    flex-direction: column;
+  }
+  .tasteful-section {
+    flex-direction: column-reverse;
+  }
+
+  .discover-section img,
+  .tasteful-section img {
+    width: 200px;
+  }
+  .article {
+    width: 100%;
+  }
+  .links {
+    gap: 30px;
+  }
+
+  .menu-articles {
     grid-template-columns: 1fr;
-}
-.chef-section {
+  }
+  .chef-section {
     flex-direction: column;
-}
-.chef-section article{
+  }
+  .chef-section article {
     width: 100%;
-}
-#polygone, #background-1 , #background-2,#background-3{
+  }
+  #polygone,
+  #background-1,
+  #background-2,
+  #background-3 {
     display: none;
-}
-.inputs{
+  }
+  .inputs {
     flex-direction: column;
-}
-.recepies-section article {
+  }
+  .recepies-section article {
     width: 100%;
-}
-.plates{
+  }
+  .plates {
     width: 100%;
-}
+  }
 }
 
 /* mobile */
 @media only screen and (max-width: 425px) {
-nav {
-   display: grid;
-   grid-template-columns: repeat(3,auto);
-
-}
-nav a{
+  nav {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+  }
+  nav a {
     text-align: center;
+  }
 
-}
-
-.span{
-font-size:30px
-}
-.title{
-    font-size: 25px ;
-}
-.text{
-    font-size: 14px ;
-}
-.recipe{
+  .span {
+    font-size: 30px;
+  }
+  .title {
+    font-size: 25px;
+  }
+  .text {
+    font-size: 14px;
+  }
+  .recipe {
     flex-direction: column;
-}
-.recipe-content{
+  }
+  .recipe-content {
     align-items: center;
     text-align: center;
-}
-.chef-section{
+  }
+  .chef-section {
     overflow-x: hidden;
-}
-.footer-container{
+  }
+  .footer-container {
     gap: 20px;
     flex-direction: column;
     padding: 40px 20px;
-}
-.footer-content{
+  }
+  .footer-content {
     flex-direction: column;
-}
-footer img {
+  }
+  footer img {
     display: none;
-}
-
-
+  }
 }
